# single-yocto

./: build.sh
poky/meta/conf/: bitbake.conf
source/common/Thread/: CMakeLists.txt  a.out  tags
source/common/Thread/inc/: ThreadPool.h
source/common/Thread/src/: Thread.cpp
source/meta-conf/: bblayers.conf.sample  local.conf.sample
source/meta-mine/conf/: layer.conf
source/meta-mine/recipes-mine/my-test/: my-test.bb
source/meta-sec/conf/: layer.conf
source/meta-sec/recipes-sec/sec/: sec.bb
source/meta-sec/recipes-sec/sec-daemon/: sec-daemon.bb
source/my-test/: CMakeLists.txt  test.c
source/sec/: CMakeLists.txt
source/sec/comm/inc/: UDPComm.h
source/sec/comm/src/: UDPComm.cpp
source/sec/public/: shared_data_set.h
source/sec/sec-api/: CMakeLists.txt
source/sec/sec-api/inc/: sec_ipc.h
source/sec/sec-api/src/: sec_ipc.cpp
source/sec/sec-core/: CMakeLists.txt  sec-core.service
source/sec/sec-core/src/: sec-core.cpp
source/sec/sec-daemon/: CMakeLists.txt  sec-daemon.service  secd  tags
source/sec/sec-daemon/inc/: UDPComm.h  daemon.h  test.h
source/sec/sec-daemon/src/: UDPComm.cpp  daemon.cpp  main.cpp  test.cpp
source/sec/sec-test/: CMakeLists.txt
source/sec/sec-test/src/: sec-test.cpp
source/sec/src/: main.cpp
